--- a/Final/report_final.tex
+++ b/Final/report_final.tex
@@ -340,42 +340,7 @@
 
 \newpage
 
-\vspace{\baselineskip}
 
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-\begin{justify}
-{\fontsize{14pt}{16.8pt}\selectfont \textbf{\textit{ }}\par}
-\end{justify}\par
-
-\begin{justify}
-{\fontsize{14pt}{16.8pt}\selectfont \textbf{\textit{ }}\par}
-\end{justify}\par
-
-\begin{justify}
-{\fontsize{14pt}{16.8pt}\selectfont \textbf{\textit{ }}\par}
-\end{justify}\par
 
 \begin{justify}
 {\fontsize{14pt}{16.8pt}\selectfont \textbf{\textit{Abstract:}}\par}
@@ -392,12 +357,6 @@
 \end{justify}\par
 
 
-\vspace{\baselineskip}
-\begin{justify}
-\textit{\textcolor[HTML]{00000A}{ }}
-\end{justify}\par
-
-
 \newpage
 
 
@@ -408,15 +367,15 @@
 \vspace{\baselineskip}\section*{ 1\hspace*{10pt}INTRODUCTION}
 \addcontentsline{toc}{section}{ 1\hspace*{10pt}INTRODUCTION}
 \begin{justify}
-\tab Sentiment Analysis (also referred as opinion mining) is the study of affective states and subjective information in the customer data (such as reviews and survey responses, online and social media) by using natural language processing and data mining techniques [1]. Sentiment analysis aims to determine the attitude of a subject with respect to some topic or the overall contextual polarity or emotional reaction to some object, such as a document, interaction, or event. The attitude may be a judgment or evaluation, affective state, or the intended emotional communication.
+Sentiment Analysis (also referred as opinion mining) is the study of affective states and subjective information in the customer data (such as reviews and survey responses, online and social media) by using natural language processing and data mining techniques [1]. Sentiment analysis aims to determine the attitude of a subject with respect to some topic or the overall contextual polarity or emotional reaction to some object, such as a document, interaction, or event. The attitude may be a judgment or evaluation, affective state, or the intended emotional communication.
 \end{justify}\par
 
 \begin{justify}
-\tab For opinion mining or sentiment analysis some methods are applied like – Naive Bayes Machine Learning Classifier, Sentiwordnet, Support Vector Machine. Here we have used Lexicon based approach of Sentiment Analysis.Sentiment lexicon is used in the lexicon based approach. Sentiment lexicon is a collection of known and defined words. A specific sentiment is assigned to each word in the collection. The lexicon based approach is divided into dictionary based approach and corpus based approach[2].
+For opinion mining or sentiment analysis some methods are applied like – Naive Bayes Machine Learning Classifier, Sentiwordnet, Support Vector Machine. Here we have used Lexicon based approach of Sentiment Analysis.Sentiment lexicon is used in the lexicon based approach. Sentiment lexicon is a collection of known and defined words. A specific sentiment is assigned to each word in the collection. The lexicon based approach is divided into dictionary based approach and corpus based approach[2].
 \end{justify}\par
 
 \begin{justify}
-\tab Sentiment analysis task is divided into three categories; Aspect level, Sentence level, Document level [3]. Aspect level analysis deal with the aspects of items. It can also be considered as phrase level analysis. In Sentence level, each sentence is considered as an entity. Summation method is used to provide overall result of the document. In document level, the whole document is considered as a single entity.
+Sentiment analysis task is divided into three categories; Aspect level, Sentence level, Document level [3]. Aspect level analysis deal with the aspects of items. It can also be considered as phrase level analysis. In Sentence level, each sentence is considered as an entity. Summation method is used to provide overall result of the document. In document level, the whole document is considered as a single entity.
 \end{justify}\par
 
 
@@ -450,11 +409,11 @@
 \subsection*{1.1\hspace*{10pt}Motivation}
 \addcontentsline{toc}{subsection}{1.1\hspace*{10pt}Motivation}
 \begin{justify}
-\tab Twitter Sentiment Analysis was thoroughly dealt by Alec Go, Richa Bhayani and Lei Huang, Computer Science graduate students of Stanford University. They used various classifiers, including Naive Bayes, Maximum Entropy as well as Support Vector Machines to classify the tweets. The feature extractors used by them were both unigrams and bigrams combined. Parts of speech tag was used because same word may have different meaning depending on its usage. The data-set used by them was huge, comprising 1.6 million tweets divided equally into positive and negative classes.
+Twitter Sentiment Analysis was thoroughly dealt by Alec Go, Richa Bhayani and Lei Huang, Computer Science graduate students of Stanford University. They used various classifiers, including Naive Bayes, Maximum Entropy as well as Support Vector Machines to classify the tweets. The feature extractors used by them were both unigrams and bigrams combined. Parts of speech tag was used because same word may have different meaning depending on its usage. The data-set used by them was huge, comprising 1.6 million tweets divided equally into positive and negative classes.
 \end{justify}\par
 
 \begin{justify}
-\tab We have chosen to work with twitter since we feel it is a better approximation of public sentiment as opposed to conventional internet articles and web blogs. The reason is that the amount of relevant data is much larger for twitter, as compared to traditional blogging sites. Moreover the response on twitter is more prompt and also more general (since the number of users who tweet is substantially more than those who write web blogs on a daily basis). Sentiment analysis of public is highly critical in macro-scale phenomena like predicting the needs of tourist and their opinions on the tourism spot. This could be done by analysing overall public sentiment towards the place with respect to time for finding the correlation between public sentiment and the place of interest. The government can also estimate the changes to be made, facilities to be provided to attract more tourists in the future and in which a negative response was registered since twitter allows us to download stream of geo-tagged tweets for particular locations. Other applications of Sentiment Analysis includes the review of movies and products, popularity of an event. Predicting the results of popular political elections and polls is also an emerging application to sentiment analysis. One such study was conducted by Tumasjan et al. in Germany for predicting the outcome of federal elections in which concluded that twitter is a good reflection of offline sentiment 
+We have chosen to work with twitter since we feel it is a better approximation of public sentiment as opposed to conventional internet articles and web blogs. The reason is that the amount of relevant data is much larger for twitter, as compared to traditional blogging sites. Moreover the response on twitter is more prompt and also more general (since the number of users who tweet is substantially more than those who write web blogs on a daily basis). Sentiment analysis of public is highly critical in macro-scale phenomena like predicting the needs of tourist and their opinions on the tourism spot. This could be done by analysing overall public sentiment towards the place with respect to time for finding the correlation between public sentiment and the place of interest. The government can also estimate the changes to be made, facilities to be provided to attract more tourists in the future and in which a negative response was registered since twitter allows us to download stream of geo-tagged tweets for particular locations. Other applications of Sentiment Analysis includes the review of movies and products, popularity of an event. Predicting the results of popular political elections and polls is also an emerging application to sentiment analysis. One such study was conducted by Tumasjan et al. in Germany for predicting the outcome of federal elections in which concluded that twitter is a good reflection of offline sentiment 
 \end{justify}\par
 
 
@@ -474,25 +433,25 @@
 \subsection*{1.2\hspace*{10pt}Literature Survey:}
 \addcontentsline{toc}{subsection}{1.2\hspace*{10pt}Literature Survey:}
 \begin{justify}
-\tab Sentiment analysis has been studied in wide area of domain such as movie review, teaching review [4], product review, e-learning, hotel review and many more. A small number of studies have focused on applying machine learning techniques in the tourism sector. 
+Sentiment analysis has been studied in wide area of domain such as movie review, teaching review [4], product review, e-learning, hotel review and many more. A small number of studies have focused on applying machine learning techniques in the tourism sector. 
 \end{justify}\par
 
 
 \vspace{\baselineskip}
 \begin{justify}
-\tab  A study [5] aimed to create a system that would assist users in understanding tourism opinions on the web by finding and extracting subjective information from reviews in tourism websites. Aspect extraction was performed with the use of frequent nouns and the opinion was determined. 
+A study [5] aimed to create a system that would assist users in understanding tourism opinions on the web by finding and extracting subjective information from reviews in tourism websites. Aspect extraction was performed with the use of frequent nouns and the opinion was determined. 
 \end{justify}\par
 
 
 \vspace{\baselineskip}
 \begin{justify}
-\tab Estela Marine-Roig et al.[6] addressed the problem of finding out the frequently occurring trends of different tourist places from tourist opinions. The authors proposed a trends extraction framework that consisted of five phases i.e. semi automatic downloading, arranging, cleaning, debugging, and analyzing. Trends extraction framework is better than previous method Liu (2011) in trends extraction because two extra phases of cleaning and debugging has been added up to eliminate the noise present in the tourist's opinions. The limitations of the work are that i. Method does not classify the derived frequent trends into positive and negative trends ii. method extracts same trend in one opinion sentence multiple times that create the reputation of trends iii. Method extracts many irrelevant and meaningless trends during classification. 
+Estela Marine-Roig et al.[6] addressed the problem of finding out the frequently occurring trends of different tourist places from tourist opinions. The authors proposed a trends extraction framework that consisted of five phases i.e. semi automatic downloading, arranging, cleaning, debugging, and analyzing. Trends extraction framework is better than previous method Liu (2011) in trends extraction because two extra phases of cleaning and debugging has been added up to eliminate the noise present in the tourist's opinions. The limitations of the work are that i. Method does not classify the derived frequent trends into positive and negative trends ii. method extracts same trend in one opinion sentence multiple times that create the reputation of trends iii. Method extracts many irrelevant and meaningless trends during classification. 
 \end{justify}\par
 
 
 \vspace{\baselineskip}
 \begin{justify}
-\tab In another way to enhance the performance of opinion sentences extraction Shimada, K.. [7] used support vector machine for sentences classification. The authors addressed the problem to identify whether tweet on-site are more likelihood or tweet off-site. The authors proposed a method to evaluate on-site likelihood. Firstly, this method takes tweets and identifies tourism related tweets. Secondly, extracts tourism related tweets and deletes the remaining ones. Lastly classifies the extracted tweets on the basis of different features of tourist places using SVM. The finding of this paper is that classification has improved by applying the method of on-site likelihood filtering method. The same fact is shown in the results i.e. without applying this filtering method Recall=58.2$\%$  and Precision = 75.0$\%$  and after applying the filtering method Recall=65.0$\%$  and Precision=80.5$\%$ . If there is a location name at the start of any tweet then it is high onsite likelihood tweet. The limitations of the work are that i. mostly the comments of authors on tweets are more than any other person which are mostly positive or negative that create nose in sentiment analysis ii. method extracts some sentences in which no opinion about targeted tourist place is given that creates noise during classification of reviews.  
+In another way to enhance the performance of opinion sentences extraction Shimada, K.. [7] used support vector machine for sentences classification. The authors addressed the problem to identify whether tweet on-site are more likelihood or tweet off-site. The authors proposed a method to evaluate on-site likelihood. Firstly, this method takes tweets and identifies tourism related tweets. Secondly, extracts tourism related tweets and deletes the remaining ones. Lastly classifies the extracted tweets on the basis of different features of tourist places using SVM. The finding of this paper is that classification has improved by applying the method of on-site likelihood filtering method. The same fact is shown in the results i.e. without applying this filtering method Recall=58.2$\%$  and Precision = 75.0$\%$  and after applying the filtering method Recall=65.0$\%$  and Precision=80.5$\%$ . If there is a location name at the start of any tweet then it is high onsite likelihood tweet. The limitations of the work are that i. mostly the comments of authors on tweets are more than any other person which are mostly positive or negative that create nose in sentiment analysis ii. method extracts some sentences in which no opinion about targeted tourist place is given that creates noise during classification of reviews.  
 \end{justify}\par
 
 
@@ -506,19 +465,19 @@
 \subsubsection*{1.3.1\hspace*{10pt}Support in decision making:}
 \addcontentsline{toc}{subsubsection}{1.3.1\hspace*{10pt}Support in decision making:}
 \begin{justify}
-\tab Decision making is a very important field of our life. Opinions extracted from reviews helps us in making various decisions like $``$which books to buy$"$ , $``$which hotel to go$"$ , $``$which movie to watch$"$  etc.
+Decision making is a very important field of our life. Opinions extracted from reviews helps us in making various decisions like $``$which books to buy$"$ , $``$which hotel to go$"$ , $``$which movie to watch$"$  etc.
 \end{justify}\par
 
 \subsubsection*{1.3.2\hspace*{10pt}Business application:}
 \addcontentsline{toc}{subsubsection}{1.3.2\hspace*{10pt}Business application:}
 \begin{justify}
-\tab In today’s world of competition, every company wants to satisfy its customers requirements by creating new innovative products. Assessments of individuals are an essential angle today with the goal that organizations can get an input from clients and can roll out sought improvements in their item. Google Product Search is one illustration.
+In today’s world of competition, every company wants to satisfy its customers requirements by creating new innovative products. Assessments of individuals are an essential angle today with the goal that organizations can get an input from clients and can roll out sought improvements in their item. Google Product Search is one illustration.
 \end{justify}\par
 
 \subsubsection*{1.3.3\hspace*{10pt}Predictions and trend analysis:}
 \addcontentsline{toc}{subsubsection}{1.3.3\hspace*{10pt}Predictions and trend analysis:}
 \begin{justify}
-\tab Sentiment analysis enables one to predict market trends by tracking views of public. It is also helpful in elections where candidates wants to know the expectations of people from them. It is also used to follow the events that are trending right now.
+Sentiment analysis enables one to predict market trends by tracking views of public. It is also helpful in elections where candidates wants to know the expectations of people from them. It is also used to follow the events that are trending right now.
 \end{justify}\par
 
 
@@ -549,20 +508,7 @@
 \vspace{\baselineskip}
 
 \vspace{\baselineskip}
-\begin{justify}
- 
-\end{justify}\par
 
-\begin{justify}
- 
-\end{justify}\par
-
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
-
-\vspace{\baselineskip}
 \section*{2\hspace*{10pt}PROPOSED MATHEMATICAL MODEL}
 \addcontentsline{toc}{section}{2\hspace*{10pt}PROPOSED MATHEMATICAL MODEL}
 \textcolor[HTML]{00000A}{Let S be the set which defines the system.}\par
@@ -636,19 +582,19 @@
 
 
 \vspace{\baselineskip}
-\tab The current pipeline that is implemented in sentiment.py is depicted in the following diagram. Initially, the input text is split into sentences and each sentence is fed to a high precision subjectivity classifier. If the sentence is classified as subjective then syntactic patterns are learned from this instance. In case that the sentence is not detected as such then it is fed to the pattern-based classifier. The pattern-based classifier outputs the class of the sentence based on the learned patterns so far. If the instance is subjective then again more patterns are learned from it, otherwise it is fed to a high precision objectivity classifier. If the sentence is classified as objective, then it is ignored, otherwise it is fed to the polarity classifier. Finally, the polarity classifier estimates the numerical sentiment and normalized sentiment values and outputs the result.\par
+The current pipeline that is implemented in sentiment.py is depicted in the following diagram. Initially, the input text is split into sentences and each sentence is fed to a high precision subjectivity classifier. If the sentence is classified as subjective then syntactic patterns are learned from this instance. In case that the sentence is not detected as such then it is fed to the pattern-based classifier. The pattern-based classifier outputs the class of the sentence based on the learned patterns so far. If the instance is subjective then again more patterns are learned from it, otherwise it is fed to a high precision objectivity classifier. If the sentence is classified as objective, then it is ignored, otherwise it is fed to the polarity classifier. Finally, the polarity classifier estimates the numerical sentiment and normalized sentiment values and outputs the result.\par
 
 \subsection*{3.2\  Subjective Classifier}
 \addcontentsline{toc}{subsection}{3.2\  Subjective Classifier}
-\tab The high precision subjectivity classifiers are used to classify the sentences as $``$Subjective$"$ . The high-precision classifiers use lists of lexical items. Many of the subjective clues are from manually developed resources. The subjectivity clues are divided into those that are strongly subjective and those that are weakly subjective, using a combination of manual review and empirical results. A strongly subjective clue is one that is seldom used without a subjective meaning, whereas a weakly subjective clue is one that commonly has both subjective and objective uses.\par
+The high precision subjectivity classifiers are used to classify the sentences as $``$Subjective$"$ . The high-precision classifiers use lists of lexical items. Many of the subjective clues are from manually developed resources. The subjectivity clues are divided into those that are strongly subjective and those that are weakly subjective, using a combination of manual review and empirical results. A strongly subjective clue is one that is seldom used without a subjective meaning, whereas a weakly subjective clue is one that commonly has both subjective and objective uses.\par
 
-\tab The high-precision subjective classifier classifies a sentence as subjective if it contains two or more of the strongly subjective clues.\par
+The high-precision subjective classifier classifies a sentence as subjective if it contains two or more of the strongly subjective clues.\par
 
 \subsection*{3.3 Objective Classifier}
 \addcontentsline{toc}{subsection}{3.3 Objective Classifier}
-\tab The high-precision objective classifier takes a different approach. Rather than looking for the presence of lexical items, it looks for their absence. It classifies a sentence as objective if there are no strongly subjective clues and at most one weakly subjective clue in the current, previous, and next sentence combined.\par
+The high-precision objective classifier takes a different approach. Rather than looking for the presence of lexical items, it looks for their absence. It classifies a sentence as objective if there are no strongly subjective clues and at most one weakly subjective clue in the current, previous, and next sentence combined.\par
 
-\tab The similar approach for objectivity classification is not taken as the sentences containing objective clues does not readily lead to high precision objective classification. Add sarcasm or a negative evaluation to a sentence about a dry topic such as stock prices, and the sentence becomes subjective. Conversely, add objective topics to a sentence containing two strongly subjective words such as odious and scumbag, and the sentence remains subjective.\par
+The similar approach for objectivity classification is not taken as the sentences containing objective clues does not readily lead to high precision objective classification. Add sarcasm or a negative evaluation to a sentence about a dry topic such as stock prices, and the sentence becomes subjective. Conversely, add objective topics to a sentence containing two strongly subjective words such as odious and scumbag, and the sentence remains subjective.\par
 
 
 \vspace{\baselineskip}
@@ -678,15 +624,15 @@ The bootstrapping process for subjective and objective classifier is given below
 
 \subsection*{3.4\ \ \  Polarity Classifier}
 \addcontentsline{toc}{subsection}{3.4\ \ \  Polarity Classifier}
-\tab A two-step approach was adopted to contextual polarity disambiguation. For the first step, we concentrate on whether clue instances are neutral or polar in context (where polar in context refers to having a contextual polarity that is positive, negative or both). For the second step, we take all clue instances marked as polar in step one, and focus on identifying their contextual polarity.\par
+A two-step approach was adopted to contextual polarity disambiguation. For the first step, we concentrate on whether clue instances are neutral or polar in context (where polar in context refers to having a contextual polarity that is positive, negative or both). For the second step, we take all clue instances marked as polar in step one, and focus on identifying their contextual polarity.\par
 
 
 \vspace{\baselineskip}
-\tab The three polarity features(modifies polarity, modified by polarity, conj polarity) look in a window of four words before, searching for the presence of particular types of polarity influencers. General polarity shifters reverse polarity (e.g., little truth, little threat). Negative polarity shifters typically make the polarity of an expression negative (e.g., lack of understanding). Positive polarity shifters typically make the polarity of an expression positive (e.g., abate the damage).\par
+The three polarity features(modifies polarity, modified by polarity, conj polarity) look in a window of four words before, searching for the presence of particular types of polarity influencers. General polarity shifters reverse polarity (e.g., little truth, little threat). Negative polarity shifters typically make the polarity of an expression negative (e.g., lack of understanding). Positive polarity shifters typically make the polarity of an expression positive (e.g., abate the damage).\par
 
 \section*{4\hspace*{10pt}DISCUSSION ON IMPLEMENTATION RESULTS}
 \addcontentsline{toc}{section}{4\hspace*{10pt}DISCUSSION ON IMPLEMENTATION RESULTS}
-\tab The proposed system was applied to the tweets gathered from twitter account of $``$GujratTourism$"$ . The final result are displayed in  Table \ref{tab:Results from Twitter Sentiment Analysis}.\par
+The proposed system was applied to the tweets gathered from twitter account of $``$GujratTourism$"$ . The final result are displayed in  Table \ref{tab:Results from Twitter Sentiment Analysis}.\par
 
 
 
@@ -725,7 +671,7 @@ The bootstrapping process for subjective and objective classifier is given below
 
 
 \vspace{\baselineskip}
-\tab The system was also tested against random dataset comprising of 420 manually annotated sentences. The results are displayed in  Table \ref{tab:Sentiment Analysis on Random Sentences}.\par
+The system was also tested against random dataset comprising of 420 manually annotated sentences. The results are displayed in  Table \ref{tab:Sentiment Analysis on Random Sentences}.\par
 
 
 
@@ -828,11 +774,11 @@ The bootstrapping process for subjective and objective classifier is given below
 \section*{5\ \ \ \  CONCLUSION AND FUTURE ENHANCEMENT}
 \addcontentsline{toc}{section}{5\ \ \ \  CONCLUSION AND FUTURE ENHANCEMENT}
 \begin{justify}
-\tab In this paper, tweets from twitter account of $``$GujaratTourism$"$  was studied. The lexicon-based approach was used to to build an extensive sentiment lexicon. The high precision subjectivity classifiers and polarity classifiers were used to generate the results. The overall accuracy that system was able to achieve was 63$\%$ . The system showed higher accuracy in classifying negative sentiments which was dropped while classifying positive sentiments. 
+We studied the tweets from twitter account of $``$GujaratTourism$"$. The lexicon-based approach was used to to build an extensive sentiment lexicon. The high precision subjectivity classifiers and polarity classifiers were used to generate the results. The overall accuracy that system was able to achieve was 63$\%$ . The system showed higher accuracy in classifying negative sentiments which was dropped while classifying positive sentiments. 
 \end{justify}\par
 
 \begin{justify}
-\tab As a future work, we have identified multiple works that can be carried out. Firstly, fine-grained level methods can be adopted to identify whether there is a polarity towards search term or not. Secondly, WSD methods can be implemented to increase the correctness of SentiWordNet analysis since WSD handles identification of word context problem. Thirdly, sarcasm detection can be applied as addressed in experiments and results section to improve the accuracy of results. Lastly, machine learning methods may be applied to understand the accuracy of them with respect to lexicon-based methods.
+As a future work, we have identified multiple works that can be carried out. Firstly, fine-grained level methods can be adopted to identify whether there is a polarity towards search term or not. Secondly, WSD methods can be implemented to increase the correctness of SentiWordNet analysis since WSD handles identification of word context problem. Thirdly, sarcasm detection can be applied as addressed in experiments and results section to improve the accuracy of results. Lastly, machine learning methods may be applied to understand the accuracy of them with respect to lexicon-based methods.
 \end{justify}\par
 
 \begin{justify}
